Bug 99071 - Navigator heading is Truncated when mouse click
Summary: Navigator heading is Truncated when mouse click
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-04-04 06:36 UTC by odinatlas
Modified: 2017-07-18 05:36 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Navigator heading is Truncated (37.95 KB, image/png)
2016-04-04 06:36 UTC, odinatlas
Details
Navigator heading is Truncated when mouse click when outline level 4 to 10 (89.29 KB, application/vnd.oasis.opendocument.text)
2016-04-05 08:12 UTC, odinatlas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description odinatlas 2016-04-04 06:36:38 UTC
Created attachment 124052 [details]
Navigator heading is Truncated

Navigator heading is Truncated when mouse click
Comment 1 Jean-Baptiste Faure 2016-04-05 07:38:55 UTC
Please attach test file to help to reproduce the problem.

Best regards. JBF
Comment 2 odinatlas 2016-04-05 08:12:01 UTC
Created attachment 124082 [details]
Navigator heading is Truncated when mouse click when outline level 4 to 10
Comment 3 odinatlas 2016-04-05 08:18:52 UTC
impress too
Comment 4 Jean-Baptiste Faure 2016-04-05 18:53:19 UTC
Reproducible with LO 5.1.3.0.0+ (built at home under Ubuntu x86-64) and LO 5.1.2 built by Ubuntu. Same problem in the master.

Setting to NEW.

Best regards. JBF
Comment 5 odinatlas 2016-05-21 02:45:25 UTC
Navigator chinese heading is Truncated but English
Comment 6 Jean-Baptiste Faure 2016-05-21 08:19:04 UTC
Please do not change the version number. As written next to dropdown list, it is intended to show the earliest affected version.

Changed OS to ALL as I reproduced the problem on Linux.

Best regards. JBF
Comment 7 odinatlas 2016-06-01 19:41:19 UTC
Thanks for your help.

after testing,
the earliest affected version was 4.2.0.1
and version 4.1.6.2 was ok.

Best regards.
Comment 8 Jean-Baptiste Faure 2016-06-16 20:22:00 UTC
According to comment #7, changed version to 4.2.0 and added the regression keyword.

Best regards. JBF
Comment 9 Jean-Baptiste Faure 2016-09-04 08:13:02 UTC
Changed version number back to 4.2. Please reread comments 6, 7 and 8.
Comment 10 Xisco Faulí 2016-09-12 12:17:51 UTC
Adding keyword 'bibisectRequest'.
Comment 11 raal 2017-04-11 14:39:34 UTC
This seems to have begun at the below commit.
Adding Cc: to Jan Holesovsky ; Could you possibly take a look at this one?
Thanks
 61ae409e0227ca773c6f08b2f54014904251fd93 is the first bad commit
commit 61ae409e0227ca773c6f08b2f54014904251fd93
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Thu May 28 17:50:44 2015 +0800

    source-hash-62ea355b2679073b8ee326df5793231996136da9
    
    commit 62ea355b2679073b8ee326df5793231996136da9
    Author:     Jan Holesovsky <kendy@collabora.com>
    AuthorDate: Thu Dec 12 09:55:35 2013 +0100
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Thu Dec 12 09:57:42 2013 +0100
    
        fdo#72125: GetTextWidth() can get very expensive.
    
        Let's just count an approximate width using a cached value when we have too
        many entries.
    
        Change-Id: I2113887c477bc774dd00df538ec1a01f102f4726
Comment 12 Commit Notification 2017-07-14 16:11:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94c7a401583200cf5982594b1b043ad1a5e3cd38

Resolves: tdf#99071 tree view shows odd text widths when > 100 lines

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2017-07-17 10:32:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e23f7b4a418793846cf6cef602d2558ed5ccb6e&h=libreoffice-5-4

Resolves: tdf#99071 tree view shows odd text widths when > 100 lines

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.