Resolves: tdf#99071 tree view shows odd text widths when > 100 lines

reverts

commit 62ea355b2679073b8ee326df5793231996136da9
Date:   Thu Dec 12 09:55:35 2013 +0100

    fdo#72125: GetTextWidth() can get very expensive.

    Let's just count an approximate width using a cached value when we have too
    many entries.

The expert dialog got fixed by not populating it with all options on load
and instead by incremental disclosure as the users searches/expands it so
this optimization effort isn't needed

in the meantime there was another problem the above papered over with

commit b4bbb5e5d7b31caad2fbcc00382ad27df3c81001
Date:   Sun May 17 22:56:46 2015 +0900

refactor how font, fg. and bg. are applied in widgets/controls

which was fixed (hopefully) in the previous commit

Change-Id: I8383d9cd7a9983a85c7f3acec0281d984c44f9e7
Reviewed-on: https://gerrit.libreoffice.org/39951
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>